--- a/fl-config-server/pom.xml
+++ b/fl-config-server/pom.xml
@@ -50,6 +50,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>fl-config-server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
