--- a/fl-config-server/src/main/resources/configs/fltelegram.yml
+++ b/fl-config-server/src/main/resources/configs/fltelegram.yml
@@ -1,14 +1,13 @@
 server:
-  port: 8102
+  port: 8200
 
 spring:
   datasource:
-    url: jdbc:postgresql://34.214.181.53/telegram
-    username: postgres
+    url: jdbc:h2:file:./fltelegram;DB_CLOSE_ON_EXIT=FALSE
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL95Dialect
+        dialect: org.hibernate.dialect.H2Dialect
