--- a/fl-telegram/pom.xml
+++ b/fl-telegram/pom.xml
@@ -48,8 +48,8 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -92,6 +92,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>fl-telegram</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
